test/error/directive_jumble.true
#version 100
#error foo
#error bar
#error baz
